--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -90,6 +90,16 @@
 
   "orContinueShopping": "أو تابع التسوق"
 }
-
+,
+ "BrandProductsPage": {
+    "title": "منتجات البراند",
+    "loading": "جاري تحميل المنتجات...",
+    "error": "حدث خطأ أثناء تحميل المنتجات",
+    "bestSelling": "الأكثر مبيعًا",
+    "priceLowHigh": "السعر: من الأقل إلى الأعلى",
+    "priceHighLow": "السعر: من الأعلى إلى الأقل",
+    "noProducts": "لا توجد منتجات متاحة لهذا البراند"
+  }
+  
 
 }
