--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -88,6 +88,15 @@
     "goToCheckout": "Proceed to Checkout",
     "goToCart": "Proceed to Cart",
     "orContinueShopping": "or continue shopping"
+  },
+  "BrandProductsPage": {
+    "title": "Brand Products",
+    "loading": "Loading products...",
+    "error": "An error occurred while loading products",
+    "bestSelling": "Best selling",
+    "priceLowHigh": "Price: Low to High",
+    "priceHighLow": "Price: High to Low",
+    "noProducts": "No products available for this brand"
   }
 
 }
