--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -118,6 +118,50 @@
     "gridView2Cols": "Grid view 2 columns",
     "gridView3Cols": "Grid view 3 columns",
     "listView": "List view"
+  },
+    "login": {
+    "welcomeBack": "Welcome Back!",
+    "subtitle": "Please enter your details to sign in.",
+    "email": "Email Address",
+    "password": "Password",
+    "forgotPassword": "Forgot Password?",
+    "signIn": "Sign In",
+    "signingIn": "Signing In...",
+    "noAccount": "Don't have an account?",
+    "createAccount": "Create an account",
+    "error": "Error",
+    "fillAllFields": "Please fill in all fields",
+    "success": "Successfully logged in!",
+    "failed": "Something went wrong. Try again."
+  },
+  "register": {
+    "title": "Create your account",
+  "subtitle": "Fill in the information below to get started.",
+  "fullName": "Full Name",
+  "phone": "Phone Number",
+  "email": "Email Address",
+  "password": "Password",
+  "createAccount": "Create Account",
+  "fillInfo": "Please fill in the following information to get started.",
+  "fullNamePlaceholder": "Enter your full name",
+  "phonePlaceholder": "Enter your phone number",
+  "emailPlaceholder": "Enter your email address",
+  "passwordPlaceholder": "Enter your password",
+  "confirmPasswordPlaceholder": "Re-enter your password",
+  "alreadyHaveAccount": "Already have an account?",
+  "passwordMismatch": "Passwords do not match",
+  "somethingWentWrong": "Something went wrong. Please try again.",
+  "confirmPassword": "Confirm Password",
+  "register": "Register",
+  "registering": "Registering...",
+  "signIn": "Sign in",
+  "error": "Error",
+  "fillAllFields": "Please fill in all fields",
+  "passwordsMismatch": "Passwords do not match",
+  "success": "Success",
+  "accountCreated": "Account created successfully!",
+  "registrationFailed": "Registration failed",
+  "somethingWrong": "Something went wrong. Try again."
   }
 
 }
