fix checkout page

--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -177,6 +177,43 @@
   "modifyingQuantity": "جاري حذف تعديل الكمية...",
   "updateSuccess": "تم تغير الكمية بنجاح"
   },
+  "checkout": {
+    "checkoutFormTitle": "نموذج الطلب",
+  "contactInformation": "معلومات الاتصال",
+  "mobileNumber": "رقم الجوال",
+  "emailAddress": "البريد الإلكتروني",
+  "note": "ملاحظة",
+  "shippingMethod": "طريقة الشحن",
+  "chooseShippingMethod": "اختر طريقة الشحن",
+  "homeDelivery": "التوصيل للمنزل",
+  "pickup": "استلام من المتجر",
+  "shippingAddress": "عنوان الشحن",
+  "selectAddress": "اختر العنوان",
+  "paymentMethod": "طريقة الدفع",
+  "choosePaymentMethod": "اختر طريقة الدفع",
+  "cashOnDelivery": "الدفع عند الاستلام",
+  "creditCardStripe": "بطاقة ائتمان (Stripe)",
+  "freeShippingMessage": "✅ التوصيل مجاني لأن إجمالي الطلب أكثر من {amount} دينار",
+  "deliveryFeeMessage": "رسوم التوصيل: {fee} دينار",
+  "loadingAddresses": "جاري تحميل العناوين...",
+  "submittingOrder": "جاري إرسال الطلب...",
+  "placeOrder": "إتمام الطلب",
+  "cartEmpty": "عربة التسوق فارغة! الرجاء إضافة منتجات قبل إتمام الطلب.",
+  "fillAllRequired": "يرجى ملء جميع الحقول المطلوبة.",
+  "orderSuccessTitle": "تم الطلب بنجاح!",
+  "orderSuccessText": "سعيدون جدًا بثقتك ونتمنى لك تجربة رائعة مع منتجاتنا",
+  "orderSuccessBtn": "موافق",
+  "orderFailTitle": "فشل في إرسال الطلب",
+  "orderFailText": "حدث خطأ أثناء المعالجة. حاول مرة أخرى لاحقًا.",
+    "orderSummaryTitle": "ملخص الطلب",
+  "cartEmptyMessage": "عربة التسوق فارغة",
+  "subtotal": "الإجمالي الفرعي",
+  "shipping": "التوصيل",
+  "freeDelivery": "توصيل مجاني!",
+   "noAddressesMessage": "لا توجد عناوين مسجلة حتى الآن.",
+  "addAddressLinkText": "أضف عنواناً جديداً",
+  "total": "الإجمالي"
+  },
   
 "product": {
     "description": "الوصف",
