--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -107,6 +107,43 @@
   "modifyingQuantity": "Modifying quantity...",
   "updateSuccess": "Quantity updated successfully"
   },
+"checkout": {
+   "checkoutFormTitle": "Checkout Form",
+  "contactInformation": "Contact Information",
+  "mobileNumber": "Mobile number",
+  "emailAddress": "Email address",
+  "note": "Note",
+  "shippingMethod": "Shipping Method",
+  "chooseShippingMethod": "Choose shipping method",
+  "homeDelivery": "Home Delivery",
+  "pickup": "Pickup from Store",
+  "shippingAddress": "Shipping Address",
+  "selectAddress": "Select Address",
+  "paymentMethod": "Payment Method",
+  "choosePaymentMethod": "Choose payment method",
+  "cashOnDelivery": "Cash on Delivery",
+  "creditCardStripe": "Credit Card (Stripe)",
+  "freeShippingMessage": "✅ Free shipping because order total is over {amount} JOD",
+  "deliveryFeeMessage": "Delivery fee: {fee} JOD",
+  "loadingAddresses": "Loading addresses...",
+  "submittingOrder": "Submitting order...",
+  "placeOrder": "Place Order",
+  "cartEmpty": "Your cart is empty! Please add products before checking out.",
+  "fillAllRequired": "Please fill all required fields.",
+  "orderSuccessTitle": "Order placed successfully!",
+  "orderSuccessText": "We’re very happy for your trust and wish you a great experience with our products",
+  "orderSuccessBtn": "OK",
+  "orderFailTitle": "Failed to submit order",
+  "orderFailText": "An error occurred during processing. Please try again later.",
+   "orderSummaryTitle": "Order Summary",
+  "cartEmptyMessage": "Your cart is empty",
+  "subtotal": "Subtotal",
+  "shipping": "Shipping",
+  "noAddressesMessage": "No addresses saved yet.",
+  "addAddressLinkText": "Add a new address",
+  "freeDelivery": "Free Delivery!",
+  "total": "Total"
+  },
   "BrandProductsPage": {
     "title": "Brand Products",
     "loading": "Loading products...",
